--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -54,6 +54,7 @@ $lightgray: rgb(253, 254, 255);
             text-transform: uppercase;
             font-weight: 400;
             color: #FFF;
+            font-size: 1.5rem;
         }
     }
 }
