--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -1,8 +1,11 @@
 $egreen1: #87ad36;
+$eblue: #00A6A6;
 
 #dashboard {
 
-    .card>div.row {
+    margin-top: 0 !important;
+
+    /*.card>div.row {
         margin: 0;
 
         div.col-7 {
@@ -51,5 +54,17 @@ $egreen1: #87ad36;
         hr {
             border-color: #FFF;
         }
+    }*/
+
+    .ct-line {
+        stroke-width: 0px;
+    }
+
+    .ct-series-b .ct-point {
+        stroke: $egreen1;
+    }
+
+    .ct-series-a .ct-point {
+        stroke: $eblue;
     }
 }
