changed chart lib, replaced select with buttons, date changes

--- a/src/index.scss
+++ b/src/index.scss
@@ -72,6 +72,11 @@ html, body {
   }
 }
 
+.btn-success, .btn-success {
+  border-color: $egreen !important;
+  background-color: $egreen !important;
+}
+
 .list {
 
   margin-top: 1rem;
