--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -1,9 +1,52 @@
 $egreen1: #87ad36;
 $eblue: #00A6A6;
+$lightgray: rgba(0, 0, 0, 0.54);
+$darkgray: #4b4b4b;
 
 #dashboard {
 
     margin-top: 0 !important;
+
+    .dashboard-buttons--container {
+        display: inline;
+        float: right;
+        
+        .btn {
+            margin-right: 5px;
+        }
+    }
+
+    .dashboard-curr-date{
+        margin: 20px 70px;
+
+        p {
+            color: $lightgray;
+            font-size: 15px;
+
+            i {
+                font-size: 17px;
+                
+                &:hover {
+                    cursor: pointer;
+                    color: #03084A;
+                }
+
+                &:first-child{
+                    margin-right: 20px;
+                }
+                &:last-child {
+                    margin-left: 20px;
+                }
+            }
+        }
+    }
+
+    .chart-container {
+        position: relative;
+        margin: auto;
+        height: 80vh;
+        width: 80vw;
+      }
 
     /*.card>div.row {
         margin: 0;
