--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import 'styles/login.scss';
+@import 'node_modules/bootstrap/scss/bootstrap.scss';
 @import 'styles/companies.scss';
 
 $egreen: #96c13d;
