--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -3,7 +3,7 @@ $egreen1: #87ad36;
 $lightgray: rgb(253, 254, 255);
 
 @media only screen and (max-width: 1023px) {
-    #login-view{
+    #login-view, #register{
         >div:first-child{
             display: none;
         }
@@ -28,7 +28,7 @@ $lightgray: rgb(253, 254, 255);
 }
 
 @media (min-width: 1024px) {
-    #login-view {
+    #login-view{
         margin: 0;
 
         #login-container  >div.row{
@@ -41,8 +41,16 @@ $lightgray: rgb(253, 254, 255);
             }
         }
     }
+
+    #register {
+        margin: 0;
+
+        #login-container >div.row {
+            margin-top: 2rem;
+        }
+    }
 }
-#login-view {
+#login-view, #register {
     background-color: $lightgray;
     padding-left: 0px !important;
     height: 100vh;
@@ -60,11 +68,23 @@ $lightgray: rgb(253, 254, 255);
     }
 }
 
+#register {
+    #login-container {
+        width: 70%;
+        text-align: left;
+        padding: 0 30px;
+    }
+}
+
 .header-img{
     background-image: url("/assets/images/header2.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: auto;
+}
+
+#login-view #login-container {
+    width: 50%;
 }
 
 #login-container{
