--- a/src/index.scss
+++ b/src/index.scss
@@ -142,3 +142,29 @@ html, body {
       right: 0;
   }
 }
+
+.btn-primary, .form-control {
+  font-size: 0.9rem;
+  padding: 0.575rem 0.85rem;
+}
+
+.form-control {
+  border-radius: 1rem;
+  color: #424242;
+
+}
+
+.btn-primary {
+  border: none;
+  background-color: $egreen;
+  border-radius: 0.5rem;
+  border-radius: 1.5rem;
+
+  &:hover {
+    background-color: $egreen;
+  }
+}
+
+::placeholder { /* Most modern browsers support this now. */
+  color: rgba(0,0,0,0.54);
+}
