--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import 'styles/login.scss';
+@import 'styles/analysis.scss';
 @import 'node_modules/bootstrap/scss/bootstrap.scss';
 @import 'styles/companies.scss';
 
@@ -154,10 +155,14 @@ html, body {
 
 }
 
-.btn-primary {
+.btn-primary:not(:disabled):not(.disabled):active{
   border: none;
   background-color: $egreen;
-  border-radius: 0.5rem;
+}
+
+.btn-primary, .page-item.active .page-link {
+  border: none;
+  background-color: $egreen;
   border-radius: 1.5rem;
 
   &:hover {
@@ -165,6 +170,14 @@ html, body {
   }
 }
 
+.page-item.active .page-link {
+  border-radius: 0.25rem;
+}
+
 ::placeholder { /* Most modern browsers support this now. */
   color: rgba(0,0,0,0.54);
+}
+
+.modal-body {
+  padding: 2rem;
 }
