--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import 'styles/analysis.scss';
 @import 'node_modules/bootstrap/scss/bootstrap.scss';
 @import 'styles/companies.scss';
+@import 'styles/profile.scss';
 
 $egreen: #96c13d;
 $gray: rgba(0,0,0,0.64);
@@ -84,7 +85,7 @@ html, body {
 
     font-size: 0.9rem;
 
-    tr:hover {
+    tbody tr:hover {
       cursor: pointer;
       background-color: rgba(0,0,0,0.02);
     }
@@ -92,56 +93,28 @@ html, body {
     th {
       border: none;
       color: rgba(0,0,0,0.54);
-      font-weight: 600;
+      font-weight: 500;
+      text-transform: uppercase;
       cursor: default;
     }
 
     td {
       color: #424242;
+      padding: 1rem;
+      border-top: 1px solid rgba(0,0,0,0.02);
     }
   }
 }
 
 .btn {
-  border-radius: 1.25rem;
+  border-radius: 0.4rem;
 }
 
 .right {
   float: right;
 }
 
-.ct-legend {
-  position: relative;
-  z-index: 10;
-
-  li {
-      position: relative;
-      padding-left: 23px;
-      margin-bottom: 3px;
-  }
-
-  li:before {
-      width: 12px;
-      height: 12px;
-      position: absolute;
-      left: 0;
-      content: '';
-      border: 3px solid transparent;
-      border-radius: 2px;
-  }
-
-  li.inactive:before {
-      background: transparent;
-  }
-
-  &.ct-legend-inside {
-      position: absolute;
-      top: 0;
-      right: 0;
-  }
-}
-
-.btn-primary, .form-control {
+.form-control {
   padding: 0.575rem 0.85rem;
 }
 
@@ -153,17 +126,18 @@ html, body {
 }
 
 .btn-primary:not(:disabled):not(.disabled):active{
-  border: none;
+  border: 1px solid transparent;
   background-color: $egreen;
 }
 
 .btn-primary, .page-item.active .page-link {
-  border: none;
+  border: 1px solid transparent;
   background-color: $egreen;
   border-radius: 0.4rem;
 
   &:hover {
     background-color: $egreen;
+    border-color: transparent;
   }
 }
 
@@ -183,4 +157,19 @@ html, body {
   border: none;
   box-shadow: 0 1px 1px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
   border-radius: 0;
+}
+
+.modal-body {
+  h5 {
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: rgba(0,0,0,0.6);
+  }
+}
+
+.map-container {
+  background-image: url("/assets/images/map-example.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: auto;
 }
