--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ $egreen: #96c13d;
 $gray: rgba(0,0,0,0.64);
 
 html, body {
-  background-color: rgb(250,250,250);
+  background-color: #fcfcfc;
   font-family: 'Roboto' !important;
   font-size: 13px;
 }
@@ -157,8 +157,8 @@ html, body {
 
 .card {
   border: none;
-  box-shadow: 0 1px 1px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
-  border-radius: 0;
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,.05), 0 1px 1px 0 rgba(0,0,0,.05), 0 2px 1px -1px rgba(0,0,0,.05);
+  border-radius: 2px;
 }
 
 .modal-body {
@@ -178,4 +178,16 @@ html, body {
 
 .tabs .nav-link {
   color: $egreen;
+}
+
+.table-pagination .custom-select {
+  width: 60px;
+}
+
+.margin-bottom-1 {
+  margin-bottom: 1rem;
+}
+
+.margin-top-1 {
+  margin-top: 1rem;
 }
