--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -3,6 +3,10 @@ $egreen1: #87ad36;
 $lightgray: rgb(253, 254, 255);
 $darkgray: #4b4b4b;
 
+.navbar {
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05), 0 1px 1px 0 rgba(0, 0, 0, 0.05), 0 2px 1px -1px rgba(0, 0, 0, 0.05);
+}
+
 #top-nav{
     background-color: #FFF;
 
@@ -46,11 +50,11 @@ $darkgray: #4b4b4b;
         display: inline-block;
     }
 
-    ul.w-100 .nav-item:last-child{
+    /*ul.w-100 .nav-item:last-child{
         position: absolute;
         width: 100%;
         bottom: 4%;
-    }
+    }*/
 
     .nav-item{
 
