--- a/src/index.scss
+++ b/src/index.scss
@@ -5,13 +5,14 @@
 @import 'styles/company.scss';
 @import 'styles/profile.scss';
 @import 'styles/graphs.scss';
+@import 'styles/notification.scss';
 
 $egreen: #96c13d;
 $gray: rgba(0,0,0,0.64);
 
 html, body {
   background-color: #fcfcfc;
-  font-family: 'Roboto' !important;
+  font-family:'Poppins', sans-serif;
   font-size: 13px;
 }
 
@@ -19,7 +20,7 @@ html, body {
   #main {
     margin-left: 170px;
 
-    >div.row:first-child {
+    >div.row {
       margin: 1rem;
 
       >div.col:first-child {
@@ -37,6 +38,7 @@ html, body {
     margin: 0;
 
     margin-bottom: 1rem;
+    margin-top: 1rem;
 
     >div {
       padding: 0;
@@ -157,7 +159,6 @@ html, body {
 
 .card {
   border: none;
-  box-shadow: 0 1px 1px 0 rgba(0,0,0,.05), 0 1px 1px 0 rgba(0,0,0,.05), 0 2px 1px -1px rgba(0,0,0,.05);
   border-radius: 2px;
 }
 
