--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -88,3 +88,8 @@ $darkgray: #4b4b4b;
         font-weight: 300;
     }
 }
+
+.meters-submenu {
+    //display: none;
+    //background-color: rgba(0,0,0,0.2);
+}
