--- a/src/index.scss
+++ b/src/index.scss
@@ -10,14 +10,33 @@
 $egreen: #96c13d;
 $gray: rgba(0,0,0,0.64);
 
-.breadcrumb a {
-  color: $egreen;
-}
-
 html, body {
   background-color: #fcfcfc;
   font-family:'Poppins', sans-serif;
   font-size: 13px;
+}
+
+.breadcrumb a {
+  color: $egreen;
+}
+
+@media (max-width: 768px) {
+  .table-pagination > div.my-1 {
+    &:first-child {
+      width: 20%;
+    }
+    &:last-child {
+      width: 50%;
+    }
+  }
+
+  .row.header {
+    padding: 1rem 0;
+  }
+
+  #profile .action .btn {
+    margin-bottom: 1rem;
+  }
 }
 
 @media (min-width: 768px) {
