added gaugechart component

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -211,3 +211,13 @@ $darkgray: #4b4b4b;
         display: none;
     }
 }
+
+#gaugeChart {
+    height:100%;
+    width:100%;
+    min-height:150px;
+}
+
+.zc-ref {
+    display: none;
+}
