fixed dashboard user-admin routing

--- a/src/index.scss
+++ b/src/index.scss
@@ -51,6 +51,10 @@ html, body {
         padding: 0;
       }
     }
+    
+    >div.dashboard-parent {
+      margin: 1rem;
+    }
   }
 
   .header {
