--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -9,6 +9,11 @@ $darkgray: #4b4b4b;
 
 #top-bar {
     background-color: #FFF !important;
+
+    h6 {
+        margin-bottom: 0;
+        color: rgba(0, 0, 0, 0.5);
+    }
 }
 
 #top-nav{
