--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -11,6 +11,34 @@ $darkgray: #4b4b4b;
 
 #dashboard {
 
+    .outer {
+        width: 600px;
+        height: 200px;
+        margin: 0 auto;
+    }
+    .container {
+        width: 300px;
+        float: left;
+        height: 200px;
+        margin-left: 10%;
+    }
+    .highcharts-yaxis-grid .highcharts-grid-line {
+        display: none;
+    }
+    
+    @media (max-width: 600px) {
+        .outer {
+            width: 100%;
+            height: 400px;
+        }
+        .container {
+            width: 300px;
+            float: none;
+            margin: 0 auto;
+        }
+    
+    }
+
     .card {
         box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05), 0 1px 1px 0 rgba(0, 0, 0, 0.05), 0 2px 1px -1px rgba(0, 0, 0, 0.05);
         border-radius: 5px;
