--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -48,6 +48,10 @@ $darkgray: #4b4b4b;
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
         padding-top: 1rem;
 
+        span {
+            font-size: 1.25rem;
+        }
+
         >div {
             display: inline-block;
         }
@@ -66,7 +70,12 @@ $darkgray: #4b4b4b;
             width: 50%;
 
             h5 {
-                margin-bottom: 0;
+                margin-bottom: 2px;
+            }
+
+            p {
+                text-transform: uppercase;
+                letter-spacing: 1px;
             }
         }
     }
@@ -131,7 +140,7 @@ $darkgray: #4b4b4b;
             }
         }
 
-        .col-md-2:last-child,  .col-md-3:last-child{
+        .col-md-2:last-child,  .col-md-3:last-child, .col-md-6:last-child{
             padding-right: 15px;
         }
 
@@ -149,12 +158,39 @@ $darkgray: #4b4b4b;
 
             h5 {
                 margin-top: 0.5rem;
-                font-size: 1.2rem;
+                font-size: 1.5rem;
+                letter-spacing: 2px;
             }
 
             p {
-                margin-top: 1rem;
                 margin-bottom: 0;
+                text-transform: uppercase;
+                letter-spacing: 2px;
+            }
+        }
+
+        .dashboard-general, .dashboard-history {
+            //padding: 2rem;
+
+            .analysis-card-header {
+                border-top-left-radius: 0.4rem;
+                border-top-right-radius: 0.4rem;
+                padding: 1.5rem 2rem 1rem;
+                background-color: rgba(0, 0, 0, 0.07);
+                margin: 0;
+
+                .billable-period {
+                    text-align: right;
+                }
+            }
+
+            >div.row:nth-child(2) {
+                padding: 2rem;
+            }
+
+            .analysis-card-header h5 {
+                text-transform: uppercase;
+                letter-spacing: 2px;
             }
         }
     }
