set demand and epimp values with initializer in the dashboard biew

--- a/src/index.scss
+++ b/src/index.scss
@@ -221,6 +221,10 @@ html, body {
   color: $egreen;
 }
 
+.tabs .card-header {
+  background-color: #F5F5F5;
+}
+
 .table-pagination .custom-select {
   width: 60px;
 }
