--- a/src/index.scss
+++ b/src/index.scss
@@ -90,6 +90,10 @@ html, body {
     .filters-container .btn {
       margin-top: 13px;
     }
+
+    .filters-container .form-control.custom-select {
+      background-color: #FFFF;
+    }
   }
 }
 
