--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,7 +1,7 @@
-$egreen: #84b92e;
+$egreen: #AFFC0F;
 $egreen1: #87ad36;
-$lightgray: rgb(253, 254, 255);
-$darkgray: #4b4b4b;
+$lightgray: #fdfeff;
+$darkgray: #485658;
 
 @media only screen and (max-width: 1023px) {
     #login-container, #register-container {
