--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -1,4 +1,5 @@
-$egreen1: #AFFC0F;
+$egreen: #AFFC0F;
+$egreen1: rgb(152, 214, 16);
 $eblue: #00A6A6;
 $lightgray: #f2f3f4;
 $darkgray: #485658;
@@ -134,6 +135,10 @@ $gray: #ADADAD;
 
             .blue {
                 color: $eblue;
+            }
+
+            .dark-blue {
+                color: #197382;
             }
 
             .yellow {
