--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -7,6 +7,11 @@ $darkgray: #485658;
     box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.05), 0 0px 1px 0 rgba(0, 0, 0, 0.05), 0 1px 1px -1px rgba(0, 0, 0, 0.05);
 }
 
+.nav-logo-container img{
+    height: 70px;
+    width: 70px;
+}
+
 #top-bar {
     background-color: #fcfcfc !important;
     //box-shadow: 0 0 5px 0 #c2c2c2;
