Variable name and order inverted and login button text color restored

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,12 @@ html, body {
   background-color: $egreen;
 }
 
+#login {
+  .btn-primary {
+    color: rgb(247, 247, 248) !important;
+  }
+}
+
 @media (max-width: 768px) {
   .table-pagination > div.my-1 {
     &:first-child {
