Profile option moved to header dropdown

--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -97,3 +97,8 @@ $darkgray: #485658;
         font-weight: 300;
     }
 }
+
+.fa-user {
+    transform: translateY(-1.6px);
+    margin-right: 5px;
+}
