--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -42,8 +42,7 @@ $gray: #ADADAD;
     }
 
     .card {
-        //box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05), 0 1px 1px 0 rgba(0, 0, 0, 0.05), 0 2px 1px -1px rgba(0, 0, 0, 0.05);
-        //box-shadow: 0 0px 5px 0 #c2c2c2;
+        box-shadow: 5px 7px 13px 0 rgba(0, 0, 0, 0.233)
     }
 
     .analysis-item--cat {
