--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -16,14 +16,10 @@ $darkgray: #485658;
     background-color: #fcfcfc !important;
     //box-shadow: 0 0 5px 0 #c2c2c2;
     position: relative;
-    height: 60px !important;
+    height: 62px !important;
 
     .weatherwidget-io {
-        transform: translate(-120px, -16px);
-        position: absolute !important;
-        width: 100% !important;
-        top: -30px !important;
-        left: 0 !important;
+        transform: translate(0, 7px);
    
     }
 }
