FP and reactive values added to dashboard

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -75,6 +75,8 @@ $gray: #ADADAD;
             }
 
             p {
+                font-size: 14px;
+                font-weight: bold;
                 text-transform: uppercase;
                 letter-spacing: 1px;
             }
