--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -35,6 +35,14 @@ $darkgray: #485658;
 
 }
 
+#login {
+    background-image: url("/assets/login_background.png");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
 .header-img{
     background-image: url("/assets/images/header2.jpg");
     background-position: center center;
