--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -4,6 +4,7 @@ $eblue: #00A6A6;
 $lightgray: #f2f3f4;
 $darkgray: #485658;
 $gray: #ADADAD;
+$white: #ffffff;
 
 @media (max-width: 768px) {
     .dashboard-content--admin > div.col-md-6{
@@ -42,7 +43,7 @@ $gray: #ADADAD;
     }
 
     .card {
-        box-shadow: 5px 7px 13px 0 rgba(0, 0, 0, 0.233)
+        box-shadow: 5px 5px 13px 2px rgba(0, 0, 0, 0.322)
     }
 
     .analysis-item--cat {
@@ -183,7 +184,8 @@ $gray: #ADADAD;
                 border-top-left-radius: 0.4rem;
                 border-top-right-radius: 0.4rem;
                 padding: 1.5rem 2rem 1rem;
-                background-color: rgba(0, 0, 0, 0.07);
+                background-color: $white;
+                border-bottom: 1px solid $gray;
                 margin: 0;
 
                 .billable-period {
