--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -206,6 +206,31 @@ $white: #ffffff;
                 letter-spacing: 2px;
             }
         }
+
+        .daily-reading-card {
+
+            .analysis-card-header {
+                background-color: $white;
+                border-bottom: 1px solid $gray;
+                padding: 0 1rem .2rem;
+            }
+
+            .analysis-card-header h5 {
+                text-transform: uppercase;
+            }
+
+            .analysis-card-header h4 {
+                font-size: 16px;
+            }
+
+            .analysis-card-body {
+                padding-top: 1rem;
+            }
+
+            .billable-period {
+                text-align: right;
+            }
+        }
     }
 
     .dashboard-content--admin .card {
