--- a/src/app/components/Weather/vWeather.scss
+++ b/src/app/components/Weather/vWeather.scss
@@ -5,9 +5,12 @@
 
     .icon-container {
         padding: 0;
+        max-height: 45px;
 
         .weather-icon {
-            width: 5.5rem;
+            width: 7rem;
+            transform: translateX(15px);
+            transform: translateY(-17px);
         }
     }
 
