--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -148,11 +148,11 @@ $white: #ffffff;
             }
 
             .blue {
-                color: $eblue;
+                color: #2980b9;
             }
 
             .dark-blue {
-                color: #197382;
+                color: #F39C12;
             }
 
             .yellow {
