--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,6 +1,6 @@
 $egreen: #AFFC0F;
 $egreen1: rgb(152, 214, 16);
-$lightgray: rgb(253, 254, 255);
+$lightgray: rgb(143, 143, 143);
 $darkgray: #485658;
 
 .navbar {
@@ -70,16 +70,20 @@ $darkgray: #485658;
         border-right: 3px solid #fcfcfc;
 
         &:hover, &.current-view {
-            background-color: rgba(0,0,0,0.03);
+            //background-color: rgba(0,0,0,0.03);
             border-color: $egreen;
 
-            .nav-link, i {
+            i {
                 color: $egreen1;
+            }
+
+            .nav-link {
+                color: $darkgray;
             }
         }
 
-        i {
-            color: $darkgray;
+        .nav-link, i {
+            color: $lightgray;
         }
 
         .nav-link {
